force-app/main/default/objects/Comp_Plan__c/Comp_Plan__c.object-meta.xml
<CustomObject>
    <description>Represents an individual compensation plan assigned to a sales representative, linking a plan template to a participant with specific terms and status tracking.</description>
    <label>Comp Plan</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Comp Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comp Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>