force-app/main/default/objects/Comp_Plan__c/fields/Base_Pay__c.field-meta.xml
<CustomField>
    <fullName>Base_Pay__c</fullName>
    <description>Base pay component of the comp plan.</description>
    <label>Base Pay</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>