force-app/main/default/objects/Comp_Plan__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <description>Reference to the original comp plan this was cloned from.</description>
    <label>Cloned From</label>
    <type>Lookup</type>
    <referenceTo>Comp_Plan__c</referenceTo>
    <relationshipLabel>Cloned Plans</relationshipLabel>
    <relationshipName>Cloned_Plans</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>