force-app/main/default/objects/Comp_Plan__c/fields/Effective_End__c.field-meta.xml
<CustomField>
    <fullName>Effective_End__c</fullName>
    <description>The date this comp plan expires.</description>
    <label>Effective End</label>
    <type>Date</type>
</CustomField>