force-app/main/default/objects/Comp_Plan__c/fields/Effective_Start__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start__c</fullName>
    <description>The date this comp plan becomes effective.</description>
    <label>Effective Start</label>
    <type>Date</type>
</CustomField>