force-app/main/default/objects/Comp_Plan__c/fields/Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Exit_Date__c</fullName>
    <description>The date the participant exits this comp plan.</description>
    <label>Exit Date</label>
    <type>Date</type>
</CustomField>