force-app/main/default/objects/Comp_Plan__c/fields/Exit_Draw_Policy__c.field-meta.xml
<CustomField>
    <fullName>Exit_Draw_Policy__c</fullName>
    <description>Policy governing outstanding draw balances upon exit.</description>
    <label>Exit Draw Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Write_Off</fullName>
            </value>
            <value>
                <fullName>Deduct_From_Final</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>