force-app/main/default/objects/Comp_Plan__c/fields/Exit_Grace_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Exit_Grace_Period_Days__c</fullName>
    <description>Number of grace period days after exit.</description>
    <label>Exit Grace Period Days</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>