force-app/main/default/objects/Comp_Plan__c/fields/Exit_Policy__c.field-meta.xml
<CustomField>
    <fullName>Exit_Policy__c</fullName>
    <description>Policy governing how commissions are handled upon exit.</description>
    <label>Exit Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forfeit</fullName>
            </value>
            <value>
                <fullName>Pay_Through_Close</fullName>
            </value>
            <value>
                <fullName>Pay_All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>