force-app/main/default/objects/Comp_Plan__c/fields/Exit_Vesting_Policy__c.field-meta.xml
<CustomField>
    <fullName>Exit_Vesting_Policy__c</fullName>
    <description>Policy governing vesting of unvested commissions upon exit.</description>
    <label>Exit Vesting Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forfeit_Unvested</fullName>
            </value>
            <value>
                <fullName>Accelerate</fullName>
            </value>
            <value>
                <fullName>Continue_Per_Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>