force-app/main/default/objects/Comp_Plan__c/fields/Final_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Amount__c</fullName>
    <description>The approved final payment amount for this comp plan.</description>
    <label>Final Payment Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>