force-app/main/default/objects/Comp_Plan__c/fields/Final_Payment_Approved__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Approved__c</fullName>
    <description>Indicates whether the final payment has been approved.</description>
    <label>Final Payment Approved</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>