force-app/main/default/objects/Comp_Plan__c/fields/Fx_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fx_Rate__c</fullName>
    <description>Foreign exchange rate applied to this comp plan.</description>
    <label>Fx Rate</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>6</scale>
</CustomField>