force-app/main/default/objects/Comp_Plan__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Free-form notes related to this comp plan.</description>
    <label>Notes</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>