force-app/main/default/objects/Comp_Plan__c/fields/OTE__c.field-meta.xml
<CustomField>
    <fullName>OTE__c</fullName>
    <description>Total on-target earnings for this comp plan.</description>
    <label>On-Target Earnings</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>