force-app/main/default/objects/Comp_Plan__c/fields/Override_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>Override_Base_Rate__c</fullName>
    <description>Override percentage applied to the base rate.</description>
    <label>Override Base Rate</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>