force-app/main/default/objects/Comp_Plan__c/fields/Participant_Role__c.field-meta.xml
<CustomField>
    <fullName>Participant_Role__c</fullName>
    <description>The participant role associated with this comp plan.</description>
    <label>Participant Role</label>
    <type>Lookup</type>
    <referenceTo>Participant_Role__c</referenceTo>
    <relationshipLabel>Comp Plans</relationshipLabel>
    <relationshipName>Comp_Plans_Role</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>