force-app/main/default/objects/Comp_Plan__c/fields/Plan_Acceptance_Status__c.field-meta.xml
<CustomField>
    <fullName>Plan_Acceptance_Status__c</fullName>
    <description>Tracks the acceptance workflow status of the comp plan.</description>
    <label>Plan Acceptance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not_Published</fullName>
            </value>
            <value>
                <fullName>Pending_Review</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Disputed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>