force-app/main/default/objects/Comp_Plan__c/fields/Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Plan_Template__c</fullName>
    <description>Reference to the incentive plan template this comp plan is based on.</description>
    <label>Plan Template</label>
    <type>Lookup</type>
    <referenceTo>Incentive_Plan_Template__c</referenceTo>
    <relationshipLabel>Plan Assignments</relationshipLabel>
    <relationshipName>Plan_Assignments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>