force-app/main/default/objects/Comp_Plan__c/fields/Plan_Year__c.field-meta.xml
<CustomField>
    <fullName>Plan_Year__c</fullName>
    <description>The plan year this comp plan belongs to.</description>
    <label>Plan Year</label>
    <type>Lookup</type>
    <referenceTo>Plan_Year__c</referenceTo>
    <relationshipLabel>Plan Assignments</relationshipLabel>
    <relationshipName>Plan_Assignments_Year</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>