force-app/main/default/objects/Comp_Plan__c/fields/Proration_Pct__c.field-meta.xml
<CustomField>
    <fullName>Proration_Pct__c</fullName>
    <description>Proration percentage applied to this comp plan.</description>
    <label>Proration Pct</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>