force-app/main/default/objects/Comp_Plan__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <description>The sales representative assigned to this comp plan.</description>
    <label>Sales Rep</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Comp Plans</relationshipLabel>
    <relationshipName>Comp_Plans</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>