force-app/main/default/objects/Comp_Plan__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>The territory associated with this comp plan.</description>
    <label>Territory</label>
    <type>Lookup</type>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Comp Plans</relationshipLabel>
    <relationshipName>Comp_Plans_Territory</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>