force-app/main/default/objects/Comp_Plan__c/fields/Transferred_From__c.field-meta.xml
<CustomField>
    <fullName>Transferred_From__c</fullName>
    <description>Reference to the comp plan this was transferred from.</description>
    <label>Transferred From</label>
    <type>Lookup</type>
    <referenceTo>Comp_Plan__c</referenceTo>
    <relationshipLabel>Transfer Target Plans</relationshipLabel>
    <relationshipName>Transfer_Target_Plans</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>