force-app/main/default/objects/Comp_Plan__c/fields/Variable_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Variable_Compensation__c</fullName>
    <description>Variable compensation component of the comp plan.</description>
    <label>Variable Compensation</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>